--- a/index.html
+++ b/index.html
@@ -10,24 +10,24 @@
 </head>
 
 <body>
-  <div class="page-conteiner">
+  <div class="page-container">
     <header class="main-header">
-      <nav class="main-navigation-conteiner">
+      <nav class="navigation-container">
         <a href="index.html">
           <img class="main-header-logo" src="img/logo-sedona.svg" width="100" height="50" alt="Лого">
         </a>
         <ul class="without-bullets site-navigation">
-          <li class="nav-list">
-            <a class="link" href="">Информация</a>
+          <li class="nav-item">
+            <a class="link link-left" href="">Информация</a>
           </li>
-          <li class="nav-list">
-            <a class="link" href="">Фото и Видео</a>
+          <li class="nav-item">
+            <a class="link link-left" href="">Фото и Видео</a>
           </li>
-          <li class="nav-list">
-            <a class="link right" href="">Карта штата</a>
+          <li class="nav-item">
+            <a class="link link-right" href="">Карта штата</a>
           </li>
-          <li class="nav-list">
-            <a class="link right" href="hotels.html">Гостиницы</a>
+          <li class="nav-item">
+            <a class="link link-right" href="hotels.html">Гостиницы</a>
           </li>
         </ul>
       </nav>
@@ -49,23 +49,23 @@
             <div class="reason">
               <div class="marked">
                 <h3 class="reason-title">Настоящий городок</h3>
-                <p class="regular">-№1-</p>
-                <p class="regular">Седона - не аттракцион для туристов, там течёт своя жизнь</p>
+                <p>-№1-</p>
+                <p>Седона - не аттракцион для туристов, там течёт своя жизнь</p>
               </div>
               <img class="img-reason" src="img/real-city.jpg" width="800" height="400" alt="Фото города Седона">
-            </div class="reason">
+            </div>
             <ul class="without-bullets reason">
               <li class="nested-list">
                 <h3 class="reason-title home">Жильё</h3>
-                <p class="regular">Рекомендуем пожить в настоящем мотеле, всё как в кино</p>
+                <p>Рекомендуем пожить в настоящем мотеле, всё как в кино</p>
               </li>
               <li class="nested-list">
                 <h3 class="reason-title food">Еда</h3>
-                <p class="regular">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+                <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
               </li>
               <li class="nested-list ">
-                <h3 class="reason-title suvenir">Сувениры</h3>
-                <p class="regular">Не только китайского, но и местного производства!</p>
+                <h3 class="reason-title souvenir">Сувениры</h3>
+                <p>Не только китайского, но и местного производства!</p>
               </li>
             </ul>
           </li>
@@ -74,33 +74,33 @@
               <img class="img-reason" src="img/devil-canyon.jpg" width="800" height="400" alt="Фото дьявольского моста">
               <div class="marked">
                 <h3 class="reason-title">Там есть<br> мост дьявола</h3>
-                <p class="regular">-№2-</p>
-                <p class="regular">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+                <p>-№2-</p>
+                <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
               </div>
-          </li>
-          <div class="reason">
-            <li class="other-reasons">
-              <h3 class="reason-title">Небольшая площадь</h3>
-              <p class="regular">-№3-</p>
-              <p class="regular">Все достопримечательности находятся очень близко</p>
-            </li>
-            <li class="other-reasons">
-              <h3 class="reason-title">Красивая дорога</h3>
-              <p class="regular">-№4-</p>
-              <p class="regular">Ехать в седону из лас-вегаса совсем не скучно!</p>
-            </li>
-            <li class="other-reasons">
-              <h3 class="reason-title">Мало туристов</h3>
-              <p class="regular">-№5-</p>
-              <p class="regular">Большинство едет в гранд каньон и толпится там</p>
-            </li>
-          </div>
+            </div>
+            <ul class="without-bullets reason">
+              <li class="other-reasons">
+                <h3 class="reason-title">Небольшая площадь</h3>
+                <p>-№3-</p>
+                <p>Все достопримечательности находятся очень близко</p>
+              </li>
+              <li class="other-reasons">
+                <h3 class="reason-title">Красивая дорога</h3>
+                <p>-№4-</p>
+                <p>Ехать в седону из лас-вегаса совсем не скучно!</p>
+              </li>
+              <li class="other-reasons">
+                <h3 class="reason-title">Мало туристов</h3>
+                <p>-№5-</p>
+                <p>Большинство едет в гранд каньон и толпится там</p>
+              </li>
+            </ul>
         </ul>
       </section>
 
       <div>
-        <p>Заинтересовались?</p>
-        <p class="regular">Укажите предполагаемые даты поездки,<br>и мы покажем вам лучшие предложения гостиниц в седоне
+        <p><b>Заинтересовались?</b></p>
+        <p>Укажите предполагаемые даты поездки,<br>и мы покажем вам лучшие предложения гостиниц в седоне
         </p>
       </div>
 
@@ -108,18 +108,18 @@
         <button class="search" type="button">Поиск гостиницы в Седоне</button>
         <form class="user search-form" method="get" action="https://echo.htmlacademy.ru">
           <p class="search-date">
-            <div>
-              <label for="date-in">Дата заезда</label>
+            <label for="date-in">Дата заезда
               <input type="text" id="date-in" name="in" placeholder="2017-04-22">
-            </div>
-            <button type="button" aria-label="Календарь для даты заезда"><img src="img/calendar.svg"></image> </button>
+            </label>
+            <button type="button" aria-label="Календарь для даты заезда"><img src="img/calendar.svg"
+                alt="календарь для бронирования заезда"></button>
           </p>
           <p class="search-date">
-            <div>
-              <label for="date-out">Дата выезда</label>
+            <label for="date-out">Дата выезда
               <input type="text" id="date-out" placeholder="2017-07-04">
-            </div>
-            <button type="button" aria-label="Календарь для даты выезда"><img src="img/calendar.svg"></button>
+            </label>
+            <button type="button" aria-label="Календарь для даты выезда"><img src="img/calendar.svg"
+                alt="календарь для бронирования выезда"></button>
           </p>
           <p class="search-sum">
             <label for="sum-adults">Взрослые</label>
@@ -132,7 +132,6 @@
             <button type="button" aria-label="Уменьшение кол-ва детей">-</button>
             <input type="text" id="sum-child" name="child" placeholder="0" size="1">
             <button type="button" aria-label="Увеличение кол-ва детей">+</button>
-
           </p>
           <button class="find-button" type="submit">Найти</button>
         </form>
@@ -140,7 +139,6 @@
 
       <div>
         <img class="map" src="img/map.jpg" width="1400" height="750" alt="Карта">
-        <!-- меньше весит картинка и там не так много цветов-->
       </div>
 
     </main>
@@ -152,27 +150,18 @@
 
         <ul class="without-bullets social-link">
           <li>
-            <a class="link social-button" href="" aria-label="Твиттер"><svg xmlns="http://www.w3.org/2000/svg"
-                xmlns:xlink="http://www.w3.org/1999/xlink" width="17" height="15" viewBox="0 0 17 15">
-                <path fill="#FFF"
-                  d="M10.95.144c1.685-.496 2.984.27 3.577 1.179.673-.231 1.331-.481 2.011-.708a2.345 2.345 0 0 1-.857 1.768c.685.17 1.304-.491 1.304-.491-.169 1-1.006 1.788-1.563 2.024-.231 6.75-3.175 11.217-10.077 11.082h-.446c-.41 0-4.164-.46-4.898-1.887 2.271.196 3.893-.422 4.693-1.177-.96-.3-2.679-.477-2.979-2.95.349.106.564.228 1.19.119C1.705 8.247.374 7.53.448 5.33c.285.328 1.067.536 1.34.472C1.085 5.561-.182 2.442.894.85c1.818 1.854 3.735 3.606 7.152 3.773C8.254 2.33 9.183.793 10.95.144z" />
-              </svg></a>
+            <a class="social-icon twitter" href="" aria-label="Твиттер"></a>
           </li>
           <li>
-            <a class="link social-button" href="" aria-label="Фейсбук"><svg xmlns="http://www.w3.org/2000/svg"
-                width="12" height="22" viewBox="0 0 12 22">
-                <path fill="#FFF" d="M12 4V0H8a4 4 0 0 0-4 4v4H0v4h4v10h4V12h4V8H8V4h4z" /></svg></a>
+            <a class="social-icon facebook" href="" aria-label="Фейсбук"></a>
           </li>
           <li>
-            <a class="link social-button" href="" aria-label="Ютуб"><svg xmlns="http://www.w3.org/2000/svg"
-                xmlns:xlink="http://www.w3.org/1999/xlink" width="20" height="16" viewBox="0 0 20 16">
-                <path fill="#FFF"
-                  d="M17 0H3C1.35 0 0 1.35 0 3v10c0 1.65 1.35 3 3 3h14c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3zM6.027 11.998V4.002L15.014 8l-8.987 3.998z" />
-              </svg></a>
+            <a class="social-icon youtube" href="" aria-label="Ютуб"></a>
           </li>
         </ul>
         <div class="academy">
-          <p class="regular foot-text">website by</p><!--В лево никак не ставится-->
+          <p class="foot-text">website by</p>
+          <!--В лево никак не ставится-->
           <a class="link academy-link" href="https://htmlacademy.ru/intensive/htmlcss"
             aria-label="Ссылка на академию"><svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg"
               viewBox="0 0 108.08 36.85">
