--- a/hotels.html
+++ b/hotels.html
@@ -88,14 +88,8 @@
                 <div class="scale">
                   <div class="bar"></div>
                 </div>
-                <label>
-                  <input type="range" id="toggle-min" name="toggle-min" min="0" max="2999"
-                    class="range-toggle range-toggle-min">
-                </label>
-                <label>
-                  <input type="range" id="toggle-max" name="toggle-max" min="1" max="3000"
-                    class="range-toggle range-toggle-max">
-                </label>
+                <button type="button" class="range-toggle range-toggle-min">
+                <button type="button" class="range-toggle range-toggle-max">
               </div>
               <button class="btn-transparent" type="submit">Показать</button>
             </div>
